Class Name + Main Body Changes
"Navbar" changed to "navmenu" name for better description. Main body of the app also now has distinct sections, which the user can reach by either scrolling the page or using the navmenu!

--- a/public/scss/navmenu.scss
+++ b/public/scss/navmenu.scss
@@ -1,4 +1,4 @@
-.wrapper .navbar{
+.wrapper .navmenu{
     //places navbar in top left 
     position: fixed;
     left: 0;
@@ -8,27 +8,27 @@
     height: 100vh;
 }
 
-.wrapper .navbar h1{
+.wrapper .navmenu h1{
     color: white;
     text-align: center;
     line-height: 90px;
     border-bottom: 1px solid white;
 }
 
-.wrapper .navbar ul li{
+.wrapper .navmenu ul li{
     list-style: none;
     padding: 15px;
     border-bottom: 1px solid white;
     border-top: 1px solid white;
 }
 
-//navbar text colour
+//navmenu text colour
 a{
     color: white;
     text-decoration: none;
 }
 
-//navbar icon arrangement
+//navmenu icon arrangement
 i{
     margin-right: 10px;
 }
