--- a/public/scss/body.scss
+++ b/public/scss/body.scss
@@ -1,4 +1,14 @@
+*{
+    overflow-x: hidden;
+    scroll-behavior: smooth;
+}
+
 .wrapper .body{
     width: 80vw;
     margin-left: 20vw;
+}
+
+section{
+    height: 100vh;
+    padding: 30px;
 }
