ID Name + Content Changes
"recipes made section" and "add recipes section" names updated for better description of their function. Profile section moved to the top of the menu list to improve the ordering of content. Body content given basic temporary colours for contrast.

--- a/public/scss/colors.scss
+++ b/public/scss/colors.scss
@@ -5,3 +5,19 @@
 .wrapper .body{
     background: white;
 }
+
+#profileSection {
+    background: #323639;
+}
+
+#homeSection {
+    background: #282c2f;
+}
+
+#recipeTrackerSection {
+    background: #323639;
+}
+
+#timeTrackerSection {
+    background: #282c2f;
+}
