--- a/public/scss/colors.scss
+++ b/public/scss/colors.scss
@@ -1,5 +1,5 @@
 .wrapper .navmenu{
-    background: #e64c4b;
+    background: #D24545;
 }
 
 .wrapper .body{
@@ -7,17 +7,17 @@
 }
 
 #profileSection {
-    background: #323639;
+    background: #E6BAA3;
 }
 
 #homeSection {
-    background: #282c2f;
+    background: #E4DEBE;
 }
 
 #recipeTrackerSection {
-    background: #323639;
+    background: #E6BAA3;
 }
 
 #timeTrackerSection {
-    background: #282c2f;
+    background: #E4DEBE;
 }
