--- a/public/scss/navmenu.scss
+++ b/public/scss/navmenu.scss
@@ -2,7 +2,9 @@
     box-sizing: border-box;
 }
 
-.navmenu{
+// Desktop Navigation CSS
+
+.navmenu {
     //places navbar in top left 
     position: fixed;
     left: 0;
@@ -18,13 +20,20 @@
     line-height: 90px;
     padding: 15px;
     font-size: 2.5vw;
+    border-bottom: 1px solid white;
 }
 
 .navmenu ul li{
     list-style: none;
     padding: 15px;
-    border-bottom: 1px solid white;
-    border-top: 1px solid white;
+    //border-bottom: 1px solid white;
+    //border-top: 1px solid white;
+}
+
+//navmenu text colour
+a{
+    color: white;
+    text-decoration: none;
 }
 
 a:hover {
@@ -32,12 +41,22 @@ a:hover {
     padding: 15px;
 }
 
-//navmenu icon arrangement
+//navmenu icon placement
 i{
     margin-right: 10px;
 }
 
-//menu responsiveness to mobile
+//hide burger menu icon and mobile menu styling for desktop
+.menubtn {
+    display: none;
+}
+
+.mobilemenu{
+    display: none;
+}
+
+//Menu responsiveness for mobile navigation
+
 @media(max-width: 850px){
     .navmenu{
         //places navmenu across top of screen
@@ -47,13 +66,42 @@ i{
         //align-items: right;
     }
 
-    .navmenu .menubuttons{
-        position: absolute;
-        left: 75%;
+    .navmenu .mobilemenu{
+        display: none;
+        position: fixed;
+        top: 0;
+        right: 0;
+        height: 100vh;
+        width: 250px;
+        z-index: 999;
+        background-color: #d245455b; //colour is slightly transparent for glass-effect on mobile menu
+        backdrop-filter: blur(10px); //blurs background behind the mobile menu
+        box-shadow: -10px 0 10px rgba(0, 0, 0, 0.1);
+    }
+
+    //hide desktop menu for mobile
+    .desktopmenu {
+        display: none;
     }
 
     .navmenu .logo{
         font-size: 23px;
         text-align: left;
+        border-bottom: 0;
+    }
+
+    .navmenu ul li{
+        list-style: none;
+        padding: 15px;
+        width: 100%;
+    }
+
+    //size and placement of burger menu for mobile
+    .menubtn {
+        display: flex;
+        position: fixed;
+        top: 10px;
+        right: 50px;
+        font-size: 30px;
     }
 }
