--- a/public/scss/main.scss
+++ b/public/scss/main.scss
@@ -1,1 +1,10 @@
 @import "typography", "colors", "reset", "navmenu", "body";
+
+//Recipe App background image. Photo by Marta Markes on Unsplash: "https://unsplash.com/photos/table-of-round-food-containers-lfgsLxX17QA"
+  
+.wrapper {
+    background-image: url(Images/marta-markes-lfgsLxX17QA-unsplash.jpg);
+    background-position: center;
+    background-attachment: fixed;
+    background-size: cover;
+}
