--- a/public/scss/navmenu.scss
+++ b/public/scss/navmenu.scss
@@ -15,7 +15,6 @@
 }
 
 .navmenu .logo{
-    color: white;
     text-align: center;
     line-height: 90px;
     padding: 15px;
@@ -26,19 +25,16 @@
 .navmenu ul li{
     list-style: none;
     padding: 15px;
-    //border-bottom: 1px solid white;
-    //border-top: 1px solid white;
 }
 
 //navmenu text colour
 a{
-    color: white;
     text-decoration: none;
 }
 
 a:hover {
-    background-color: #A94438;
-    padding: 15px;
+    background-color: black;
+    padding: 10px;
 }
 
 //navmenu icon placement
@@ -63,7 +59,6 @@ i{
         height: 120px;
         width: 100vw;
         display: flex;
-        //align-items: right;
     }
 
     .navmenu .mobilemenu{
@@ -74,7 +69,7 @@ i{
         height: 100vh;
         width: 250px;
         z-index: 999;
-        background-color: #d245455b; //colour is slightly transparent for glass-effect on mobile menu
+        background-color: rgba(0, 0, 0, 0.596); //colour is slightly transparent for glass-effect on mobile menu
         backdrop-filter: blur(10px); //blurs background behind the mobile menu
         box-shadow: -10px 0 10px rgba(0, 0, 0, 0.1);
     }
