--- a/public/scss/colors.scss
+++ b/public/scss/colors.scss
@@ -23,3 +23,27 @@ a {
 #timeTrackerSection {
     color: white;
 }
+
+//time tracker colours
+.timeTracker th {
+    color: black;
+    background-color: #FFD046;
+}
+
+.userEntries .entryRow {
+    background: rgba(211, 211, 211, 0.507);
+}
+
+.userEntries .entryRow:nth-child(odd) {
+    background: rgba(105, 105, 105, 0.507);
+}
+
+.dateEntry, .recipeEntry, .timeEntry {
+    background: white;
+}
+
+.newEntryRow {
+    border-top: solid #333333;
+    border-bottom: solid #333333;
+    background: white;
+}
