--- a/public/scss/navmenu.scss
+++ b/public/scss/navmenu.scss
@@ -98,5 +98,12 @@ i{
         top: 10px;
         right: 50px;
         font-size: 30px;
+        cursor: pointer;
     }
+
+    //User feedback when hovering over "x" button to hide mobile nav
+    .fa-x {
+        cursor: pointer;
+    }
+
 }
