Recipe Time Tracker Styling Complete
Finished the styling by improving the 'add new recipe' button before moving on to JS code for the time tracker.

--- a/public/scss/body.scss
+++ b/public/scss/body.scss
@@ -57,8 +57,19 @@ section{
 }
 
 .newEntryRow {
-    border-top: 30vw;
+    border-top: 3px;
     border-bottom: 3px;
+}
+
+.newEntryRow td {
+    text-align: right;
+}
+
+.addEntryButton {
+    display: inline-block;
+    padding: 0.5em 1em;
+    color: green;
+    cursor: pointer;
 }
 
 // body content responsiveness for mobile
