--- a/public/scss/typography.scss
+++ b/public/scss/typography.scss
@@ -2,6 +2,28 @@
     font-family: Arial, Helvetica, sans-serif;
 }
 
+/* ---------------------
+Meal Tracker Typography
+--------------------- */
+
+.mealCard h3 {
+    font-size: 22px;
+    margin-top: 8px;
+    margin-bottom: 8px;
+    text-align: center;
+}
+
+.mealCard p {
+    font-size: 15px;
+    margin-bottom: 16px;
+}
+
+.mealCard h4 {
+    margin-top: 8px;
+    margin-bottom: 8px;
+    text-align: center;
+}
+
 /* ---------------------------
 Recipe Time Tracker Typography 
 --------------------------- */
