Meal Tracker local storage
Meal tracker can now save user inputs. E.g.: When user makes a recipe again, they can track the amount of times they've made that recipe by updating the number on that particular recipe's meal card. This data is now stored locally, so after a refresh the meal card data remains!

--- a/public/scss/typography.scss
+++ b/public/scss/typography.scss
@@ -16,11 +16,16 @@ Meal Tracker Typography
 .mealCard p {
     font-size: 15px;
     margin-bottom: 16px;
+    text-align: center;
 }
 
 .mealCard h4 {
     margin-top: 8px;
     margin-bottom: 8px;
+    text-align: center;
+}
+
+.amountEntry {
     text-align: center;
 }
 
