--- a/public/scss/body.scss
+++ b/public/scss/body.scss
@@ -34,7 +34,7 @@ Meal Tracker Styling
     background-color: white;
     border-radius: 8px;
     overflow: hidden;
-    margin: 20px;
+    margin: 15px;
 }
 
 .mealCard img {
@@ -51,7 +51,13 @@ Meal Tracker Styling
     width: 150px;
     padding: 8px 16px;
     border-radius: 4px;
-    margin-right: 50px;
+    margin-left: auto;
+    margin-right: auto;
+}
+
+.amountEntry {
+    width: 80px;
+    margin-left: 110px;
 }
 
 /* ------------------------
