General pop-up screen improvements
Changed the 'x' button to a red colour, with a hover affect and a pointer cursor to keep it consistent with the styling of the web app

--- a/public/scss/body.scss
+++ b/public/scss/body.scss
@@ -75,6 +75,11 @@ Meal Tracker Styling
     display: none;
 }
 
+//User feedback when hovering over "x" button to hide the pop-up
+.fa-x {
+    cursor: pointer;
+}
+
 /* ------------------------
 Recipe Time Tracker Styling
 ------------------------- */
