--- a/public/scss/colors.scss
+++ b/public/scss/colors.scss
@@ -52,6 +52,15 @@ Meal Tracker colours
     color: black;
 }
 
+.fa-x {
+    color: red;
+}
+
+.fa-x:hover {
+    background: rgba(0, 0, 0, 0.507);
+    padding: 5px;
+}
+
 /* ------------------------
 Recipe Time Tracker Colours
 ------------------------ */
