--- a/public/scss/typography.scss
+++ b/public/scss/typography.scss
@@ -35,6 +35,10 @@ Meal Tracker Typography
     text-align: center;
 }
 
+.mealDetailsContent {
+    margin-top: 40px;
+}
+
 /* ---------------------------
 Recipe Time Tracker Typography 
 --------------------------- */
