--- a/public/scss/typography.scss
+++ b/public/scss/typography.scss
@@ -2,6 +2,21 @@
     font-family: Arial, Helvetica, sans-serif;
 }
 
+/* --------------------
+Home section Typography
+-------------------- */
+
+.homeContent h1 {
+    font-size: 3em;
+    font-weight: bolder;
+}
+
+.homeContent h2 {
+    font-size: 1.8em;
+    font-weight: bolder;
+}
+
+
 /* ---------------------
 Meal Tracker Typography
 --------------------- */
