--- a/public/scss/body.scss
+++ b/public/scss/body.scss
@@ -38,6 +38,12 @@ Home section styling
     flex: 1 1 17rem;
 }
 
+.homeContent ul {
+    width: 190px;
+    padding: 8px 16px;
+    border-radius: 3px;
+}
+
 /* -----------------
 Meal Tracker Styling
 ----------------- */
@@ -100,6 +106,15 @@ Meal Tracker Styling
     cursor: pointer;
 }
 
+.loadButton {
+    display: flex;
+    width: 150px;
+    padding: 8px 16px;
+    border-radius: 4px;
+    margin-left: auto;
+    margin-right: auto;
+}
+
 /* ------------------------
 Recipe Time Tracker Styling
 ------------------------- */
@@ -150,6 +165,11 @@ Recipe Time Tracker Styling
     display: inline-block;
     padding: 0.5em 1em;
     cursor: pointer;
+}
+
+.loadMoreRecipes {
+    align-items: center;
+    margin-top: 50px;
 }
 
 /* ------------------------------------
