--- a/public/scss/typography.scss
+++ b/public/scss/typography.scss
@@ -21,6 +21,19 @@ Home section Typography
 Meal Tracker Typography
 --------------------- */
 
+.mealTrackerIntro {
+    text-align: center;
+}
+
+.mealTrackerIntro h1 {
+    font-size: 2.5em;
+    font-weight: bolder;
+}
+
+.mealTrackerIntro h2 {
+    font-size: 1.5em;
+}
+
 //cards
 .mealCard h3 {
     font-size: 22px;
@@ -57,6 +70,20 @@ Meal Tracker Typography
 /* ---------------------------
 Recipe Time Tracker Typography 
 --------------------------- */
+
+.timeTrackerIntro {
+    text-align: center;
+}
+
+.timeTrackerIntro h1 {
+    font-size: 2.5em;
+    font-weight: bolder;
+}
+
+.timeTrackerIntro h2 {
+    font-size: 1.5em;
+    margin-bottom: 100px;
+}
 
 .timeTracker {
     font-size: 14px;
