Pop-up screen styling continued
The pop-up screen now has associated data for fried rice (other meal cards currently do not have their own associated data). background colour changed to white for improved readability.

--- a/public/scss/colors.scss
+++ b/public/scss/colors.scss
@@ -77,7 +77,8 @@ Meal Tracker colours
 
 //meal details pop-up
 .mealDetails {
-    background-color: #FFD046;
+    background-color: #ffffff81;
+    backdrop-filter: blur(10px);
     color: black;
 }
 
