--- a/public/scss/typography.scss
+++ b/public/scss/typography.scss
@@ -67,6 +67,11 @@ Meal Tracker Typography
     margin-top: 40px;
 }
 
+.mealDetailsContent h3 {
+    margin-bottom: 20px;
+    margin-top: 20px;
+}
+
 /* ---------------------------
 Recipe Time Tracker Typography 
 --------------------------- */
