--- a/public/scss/navmenu.scss
+++ b/public/scss/navmenu.scss
@@ -19,7 +19,8 @@
     line-height: 90px;
     padding: 15px;
     font-size: 2.5vw;
-    border-bottom: 1px solid white;
+    border-bottom: 2px solid white;
+    margin-bottom: 30px;
 }
 
 .navmenu ul li{
@@ -79,10 +80,16 @@ i{
         display: none;
     }
 
+    //styling the web app logo
     .navmenu .logo{
-        font-size: 23px;
-        text-align: left;
-        border-bottom: 0;
+        position: fixed;
+        top: 0;
+        left: 0;
+        width: 160px;
+        height: 120px;
+        border-bottom: none;
+        padding: none;
+        border-radius: 50%;
     }
 
     .navmenu ul li{
